--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body a:focus {
 }
 
 .hide{
-    display:none;
+    display:none !important;
 }
 
 .list-group-item {
@@ -850,11 +850,9 @@ h2 a.navbar-brand i {
 #pop-checkbox{
 	display: none;
 }
-#pop-checkbox:checked + #pop{
-	display:flex;
-}
+
 #pop{
-	display: none;
+    display: flex;
 	position: fixed;
 	flex-flow: column;
 	justify-content: center;
@@ -865,12 +863,20 @@ h2 a.navbar-brand i {
 	background:rgba(0,0,0,0.3);
 }
 
-#pop-body{
+#pop-sub{
 	width:40vw;
 	height:40vh;
-	background: rgba(255,255,255,0.8)
+	background: rgba(255,255,255,0.8);
 	margin:auto;
 	display: flex;
 	flex-flow: column;
-	justify-content: center;
+    justify-content: space-evenly;
+    text-align: center;
+}
+#pop-sub button{
+    display:inline-block;
+    padding:0.2vw 0.4vw;
+    margin:0.5vw;
+    border-radius:2px;
+    border:0;
 }
